--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gregorios07.github.io/personal-profile",
+  "homepage": "http://gregorios07.github.io/personal-profile/index",
   "name": "personal-profile",
   "version": "0.1.0",
   "private": true,
