--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gregorios07.github.io/personal-profile/index",
+  "homepage": "http://gregorios07.github.io/personal-profile",
   "name": "personal-profile",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +11,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-typewriter-effect": "^1.1.0",
     "react-typing-effect": "^2.0.5",
@@ -43,7 +44,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1",
-    "react-router-dom": "^6.23.1"
+    "gh-pages": "^6.1.1"
   }
 }
